# shared-bucket

./: Makefile  README.md  truc.md
.github/workflows/: customers.yml
actors/customers/: Cargo.toml  Makefile  README.md
actors/customers/src/: lib.rs
actors/service-vendor/: Cargo.toml  Makefile  README.md
actors/service-vendor/src/: lib.rs
actors/service-vendors/: Cargo.toml  Makefile
actors/service-vendors/src/: lib.rs
actors/shared-bucket-api/: Cargo.toml  Makefile  README.md
actors/shared-bucket-api/samples/: customer1.json  test.sh
actors/shared-bucket-api/src/: lib.rs
interfaces/shared-bucket/: Makefile  codegen.toml  customers.smithy  service-vendors.smithy  shared-bucket.smithy
interfaces/shared-bucket/rust/: Cargo.toml
interfaces/shared-bucket/rust/src/: lib.rs  shared_bucket.rs
