[package]
name = "Customers"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "customers"

[dependencies]
anyhow = "1.0.57"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.8.2"
wasmcloud-interface-keyvalue = "0.6.0"
wasmcloud-interface-logging = "0.5"
serde = "1.0.137"
serde_json = "1.0.81"
shared-bucket = { path = "../../interfaces/shared-bucket/rust" }
uuid = { version = "1.1.1", features = [ "v4", "js" ] }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
